--- a/Recommendation/templates/Recommendation/index.html
+++ b/Recommendation/templates/Recommendation/index.html
@@ -76,7 +76,7 @@
                    
                     
                 </div>
-                <div class="col-lg-7 col-md-12 box-shadow">
+                <div class="col-lg-7 col-md-12 mr-5 box-shadow">
                     <p class="mt-2 pl-2">Search for any products and we will provide the best recommendation for you.</p>
                     <hr>
                     <form method="GET" autocomplete="off" action="{% url 'productsearch' %}">
@@ -101,7 +101,7 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-lg-7 col-md-12 col-sm-12">
+            <div class="col-lg-7 col-md-12 col-sm-10">
                
                 <div class="box-shadow">
                      <h4 class="ml-3">Recommendations</h4>
@@ -180,8 +180,8 @@
           <div class="cart-body">
                 
           </div>
-            <div class="footer text-center">
-                <a class="btn btn-danger btn-lg btn-block checkout-btn ">CHECKOUT</a>
+            <div class="cart-footer text-center">
+                <a class="btn btn-danger btn-lg btn-block checkout-btn ">CHECKOUT </a>
             </div>
 
         </div>
