--- a/ProductBundleRecommendation/static/style.css
+++ b/ProductBundleRecommendation/static/style.css
@@ -139,6 +139,9 @@ body {
     transform: scale(1.3, 1.3)
 }
 
+.asteriskField {
+    display:none;
+}
 
 @media only screen and (max-width: 550px) {
     body{
