checkout page added

--- a/Recommendation/templates/Recommendation/index.html
+++ b/Recommendation/templates/Recommendation/index.html
@@ -181,7 +181,7 @@
                 
           </div>
             <div class="cart-footer text-center">
-                <a class="btn btn-danger btn-lg btn-block checkout-btn ">CHECKOUT </a>
+                <a class="btn btn-danger btn-lg btn-block checkout-btn " href="{% url 'checkout' %}">CHECKOUT ss</a>
             </div>
 
         </div>
