--- a/Recommendation/templates/Recommendation/index.html
+++ b/Recommendation/templates/Recommendation/index.html
@@ -91,7 +91,7 @@
                             {% endif %}
                            <datalist id="datalist"></datalist>
                         </div>
-                        <button type="submit" class="btn btn-sm btn-outline-success mt-2 cartaddbtn"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to basket</button>
+                        <button type="submit" class="btn btn-sm btn-outline-success mt-2 cartaddbtnsearch"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to basket</button>
                         
                     </form>
                 </div>
@@ -181,7 +181,12 @@
                 
           </div>
             <div class="cart-footer text-center">
-                <a class="btn btn-danger btn-lg btn-block checkout-btn " href="{% url 'checkout' %}">CHECKOUT ss</a>
+                {%if user.is_authenticated %}
+                    <a class="btn btn-danger btn-lg btn-block checkout-btn " href="{% url 'checkout' %}">CHECKOUT</a>
+                {% else %}
+                <!-- <button class="btn btn-danger btn-lg btn-block checkout-btn " disabled>CHECKOUT</button> -->
+                <button type="button" class="btn btn-lg btn-danger btn-block checkout-btn" data-toggle="popover" data-content="Please login to proceed checkout">CHECKOUT</button>
+                {% endif %}
             </div>
 
         </div>
