--- a/Checkout/templates/Checkout/checkout.html
+++ b/Checkout/templates/Checkout/checkout.html
@@ -151,7 +151,7 @@ span.price {
             </div>
         </nav>
     </div>
-    <div class="container continue mt-3 mb-3">
+    <div class=" ml-5 mr-5 pl-4 pr-4 continue mt-4 mb-5">
         <div class="progress mt-3 mb-3">
             <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
@@ -197,10 +197,11 @@ span.price {
     <div class="col-25">
         <div class="container">
         <h4>Cart <span class="price cartnum" style="color:black"></span></h4>
-        <div class="cart"></div>
+        <hr>
+        <div class="cart pb-1"></div>
         
         <hr>
-        <h4>Total <span class="price" style="color:#46be25"><b>$60</b></span></h4>
+        <h4>Total <span class="price total" style="color:#46be25"><b>$60</b></span></h4>
         </div>
     </div>
     </div>
@@ -220,24 +221,15 @@ span.price {
         populatelocalStorage.forEach((eachproductdetail)=>{
             parsed_product = JSON.parse(eachproductdetail);
             sum += parsed_product["qty"];
-            document.querySelector(".cart").innerHTML += `<p>${parsed_product['product_name_cart']} <span class="price">qty: ${parsed_product['qty']}</span></p>`
+            document.querySelector(".cart").innerHTML += `<p class="pt-1">${parsed_product['product_name_cart']} <span class="price">qty: ${parsed_product['qty']}</span></p>`
                     
     });
-    document.querySelector(".cartnum").innerHTML = `<i class="fa fa-shopping-cart"></i> <b>${sum}</b>`
+    document.querySelector(".cartnum").innerHTML = `<i class="fa fa-shopping-cart"></i> <b>${sum}</b>`;
+    randomprice = Math.random() * (200-100) + 100;
+    let total = sum * Math.floor(randomprice);
+    document.querySelector(".total").innerHTML = `<b>Rs.${total}</b>`;
 }};
 
-
-
-    function CleanStorage(){
-        localStorage.clear();
-        if(localStorage.length == 0){
-            document.querySelector(".continue").innerHTML = '';
-            document.querySelector(".continue").innerHTML = `Your order has been placed. Please check your email. <a href="{% url 'homepage' %}">Continue Shopping</a>`;
-        }
-        //document.getElementById("submit-button").disabled = true;
-
-        
-    }
 
     displayProduct();
 
