--- a/Checkout/templates/Checkout/checkout.html
+++ b/Checkout/templates/Checkout/checkout.html
@@ -191,6 +191,10 @@ span.price {
             </div>
             
             <input type="submit" value="Continue to checkout" class="btn" id="submit-button">
+            <div class="hiddenfield" style="display:none">
+              <input type="text" name="product_name">
+              <input type="text" name="total">
+            </div>
         </form>
         </div>
     </div>
@@ -201,7 +205,7 @@ span.price {
         <div class="cart pb-1"></div>
         
         <hr>
-        <h4>Total <span class="price total" style="color:#46be25"><b>$60</b></span></h4>
+        <h4>Total <span class="price total" style="color:#46be25"><b></b></span></h4>
         </div>
     </div>
     </div>
@@ -213,6 +217,7 @@ span.price {
 
 <script>
     const btn = document.querySelector('button');
+    //let hiddenfield = document.querySelector('.hiddenfield');
     function displayProduct(){ 
     if(localStorage.length > 0){
         populatelocalStorage = localStorage.getItem('object').split('},').join('}$').split('$');
@@ -221,16 +226,34 @@ span.price {
         populatelocalStorage.forEach((eachproductdetail)=>{
             parsed_product = JSON.parse(eachproductdetail);
             sum += parsed_product["qty"];
-            document.querySelector(".cart").innerHTML += `<p class="pt-1">${parsed_product['product_name_cart']} <span class="price">qty: ${parsed_product['qty']}</span></p>`
+            document.querySelector(".cart").innerHTML += `<p class="pt-1 product">${parsed_product['product_name_cart']} <span class="price">qty: ${parsed_product['qty']}</span></p>`
                     
     });
     document.querySelector(".cartnum").innerHTML = `<i class="fa fa-shopping-cart"></i> <b>${sum}</b>`;
     randomprice = Math.random() * (200-100) + 100;
     let total = sum * Math.floor(randomprice);
     document.querySelector(".total").innerHTML = `<b>Rs.${total}</b>`;
+    let data = ""
+    products = document.querySelectorAll(".product");
+    products.forEach((item,i) => {
+        console.log(item.innerText);
+         //hiddenfield += `<input type="text" name="product_name" value = "${item.innerText}"`;
+         data += item.innerText;
+         data += " ";
+        //document.querySelector("input[name='product_name']").value += item.innerText;
+        //document.querySelector("input[name='product_name']").value += " ";
+    });
+    document.querySelector("input[name='product_name']").value = data;
+    total = document.querySelector(".total").innerText;
+    //hiddenfield += `<input type="text" name="total" value="${total}"`;
+    document.querySelector("input[name='total']").value += total;
+    console.log(total)
 }};
 
 
     displayProduct();
+
+
+
 
 </script>
