image added to maill

--- a/Checkout/templates/Checkout/mail_message.html
+++ b/Checkout/templates/Checkout/mail_message.html
@@ -5,6 +5,7 @@
     </head>
 
     <body>
+        <img src="https://d2guulkeunn7d8.cloudfront.net/assets/beetstrap/brand/logo@3x-c01b12eeb889d8665611740b281d76fa1cf88d06bcbd8a50dbcae6baecdbe9da.png" height=45 width=130 style="display:block; margin-left:auto; margin-right:auto">
         <div style="margin:auto;width:50%">
             <div style="background-color: #1AADA3; padding-top: 30px; padding-bottom: 30px;text-align: center; color:white;"><h4>Thank you for your order.</h4></div>
             <br>
